# Real-Time-Speech-To-Text

./: README.md  assist.py  chart_data.json  pyproject.toml  real-time-assist.py  real-time-stt.py
