[project]
name = "conversational-assist"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Rishabh Jain - Closeloop Technologies", email = "rishabh.jain@closeloop.com"},
]
dependencies = [
    "pyaudio>=0.2.14",
    "faster-whisper>=1.1.0",
    "openai>=1.58.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.4",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
